# evry

./: .gitignore  Cargo.toml  README.md  functions.sh  test
src/: app_path.rs  file.rs  main.rs  parser.rs  printer.rs  time.pest  utils.rs
