[package]
name = "evry"
version = "0.3.1"
authors = ["Sean Breckenridge <seanbrecke@gmail.com>"]
edition = "2021"
description = "A shell-script-centric task scheduler; uses exit codes to determine control flow"
documentation = "https://docs.rs/evry"
readme = "README.md"
homepage = "https://github.com/seanbreckenridge/evry"
repository = "https://github.com/seanbreckenridge/evry"
license = "Apache-2.0"
keywords = ["scheduler", "cron", "anacron"]
categories = [
  "command-line-interface",
  "date-and-time",
  "filesystem",
  "parser-implementations"
]
exclude = ["test"]

[dependencies]
anyhow = "1.0.69"
app_dirs = "^1.2.1"
pest = "2.0"
pest_derive = "2.0"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"
